add number of product

--- a/credit_prediction.ipynb
+++ b/credit_prediction.ipynb
@@ -11,9 +11,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/simon/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "/home/simon/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "/home/simon/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "/home/simon/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "/home/simon/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "/home/simon/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
+      "/home/simon/anaconda3/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "/home/simon/anaconda3/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:542: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "/home/simon/anaconda3/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:543: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "/home/simon/anaconda3/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:544: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "/home/simon/anaconda3/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:545: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "/home/simon/anaconda3/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -30,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +258,7 @@
        "4              NaN             D  "
       ]
      },
-     "execution_count": 177,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2034,7 +2065,7 @@
        "[5380 rows x 19 columns]"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2060,7 +2091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2106,16 +2137,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7ff6c728b198>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f59ff6d60f0>"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2146,7 +2177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2155,7 +2186,7 @@
        "[Text(0, 0, 'default'), Text(0, 0, 'no default')]"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2188,7 +2219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2220,10 +2251,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th></th>\n",
-       "      <th>mean</th>\n",
        "      <th>median</th>\n",
-       "      <th>max</th>\n",
        "      <th>min</th>\n",
+       "      <th>max</th>\n",
+       "      <th>mean</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Y</th>\n",
@@ -2236,31 +2267,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>62.921695</td>\n",
        "      <td>36.0</td>\n",
-       "      <td>10000.0</td>\n",
        "      <td>0.004</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>62.921695</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>39.110687</td>\n",
        "      <td>36.0</td>\n",
-       "      <td>576.0</td>\n",
        "      <td>0.060</td>\n",
+       "      <td>576.0</td>\n",
+       "      <td>39.110687</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Net_Annual_Income                       \n",
-       "               mean median      max    min\n",
-       "Y                                         \n",
-       "0         62.921695   36.0  10000.0  0.004\n",
-       "1         39.110687   36.0    576.0  0.060"
+       "  Net_Annual_Income                           \n",
+       "             median    min      max       mean\n",
+       "Y                                             \n",
+       "0              36.0  0.004  10000.0  62.921695\n",
+       "1              36.0  0.060    576.0  39.110687"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2272,7 +2303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2290,7 +2321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -4029,7 +4060,7 @@
        "[5380 rows x 19 columns]"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4040,7 +4071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4050,11 +4081,13 @@
     "    raw_data[\"Net_Annual_Income\"], \n",
     "    raw_data[\"Years_At_Business\"], \n",
     "    raw_data[\"Years_At_Residence\"],\n",
+    "    raw_data[\"Nb_Of_Products\"]\n",
     "], axis=1, keys=['Y',\n",
     "                'age',\n",
     "                'Net_Annual_Income',\n",
     "                'Years_At_Business',\n",
     "                'Years_At_Residence',\n",
+    "                'Nb_Of_Products',\n",
     "])\n",
     "\n",
     "one_hot_marital_status = pd.get_dummies(raw_data[\"Marital_Status\"])\n",
@@ -4067,7 +4100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4091,7 +4124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4113,7 +4146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4123,7 +4156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4135,7 +4168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -4149,28 +4182,28 @@
       "5882         0   39              108.0                NaN                   2   \n",
       "9555         0   69                NaN                0.0                  11   \n",
       "\n",
-      "             Divorced  Married  Separated  Single  Widowed   ...    New rent  \\\n",
-      "Id_Customer                                                  ...               \n",
-      "9399                0        1          0       0        0   ...           0   \n",
-      "398                 0        0          0       1        0   ...           0   \n",
-      "5882                0        1          0       0        0   ...           0   \n",
-      "9555                0        1          0       0        0   ...           0   \n",
+      "             Nb_Of_Products  Divorced  Married  Separated  Single   ...    \\\n",
+      "Id_Customer                                                         ...     \n",
+      "9399                      1         0        1          0       0   ...     \n",
+      "398                       2         0        0          0       1   ...     \n",
+      "5882                      1         0        1          0       0   ...     \n",
+      "9555                      2         0        1          0       0   ...     \n",
       "\n",
-      "             Old rent  Owned  Parents  education  Customer_Type  Source  \\\n",
-      "Id_Customer                                                               \n",
-      "9399                0      1        0          2              1       1   \n",
-      "398                 0      1        0          3              1       0   \n",
-      "5882                0      1        0          2              1       0   \n",
-      "9555                1      0        0          2              1       0   \n",
+      "             New rent  Old rent  Owned  Parents  education  Customer_Type  \\\n",
+      "Id_Customer                                                                 \n",
+      "9399                0         0      1        0          2              1   \n",
+      "398                 0         0      1        0          3              1   \n",
+      "5882                0         0      1        0          2              1   \n",
+      "9555                0         1      0        0          2              1   \n",
       "\n",
-      "             Age_Decision  Seniority_Decision  Closed  \n",
-      "Id_Customer                                            \n",
-      "9399                16073                   1       1  \n",
-      "398                  9873                   7       1  \n",
-      "5882                11098                  13       0  \n",
-      "9555                22382                   3       1  \n",
+      "             Source  Age_Decision  Seniority_Decision  Closed  \n",
+      "Id_Customer                                                    \n",
+      "9399              1         16073                   1       1  \n",
+      "398               0          9873                   7       1  \n",
+      "5882              0         11098                  13       0  \n",
+      "9555              0         22382                   3       1  \n",
       "\n",
-      "[4 rows x 24 columns]\n"
+      "[4 rows x 25 columns]\n"
      ]
     }
    ],
@@ -4180,7 +4213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4198,7 +4231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4208,7 +4241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4224,15 +4257,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "val accuracy: 0.8448967624035131\n",
-      "val f1: 0.45876315963856434\n"
+      "val accuracy: 0.89942346507378\n",
+      "val f1: 0.5598573285691523\n"
      ]
     }
    ],
@@ -4270,6 +4303,34 @@
     "print(f\"val accuracy: {val_acc}\")\n",
     "print(f\"val f1: {val_f1}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
