--- a/credit_prediction.ipynb
+++ b/credit_prediction.ipynb
@@ -11,40 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/simon/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "/home/simon/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "/home/simon/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "/home/simon/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "/home/simon/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "/home/simon/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
-      "/home/simon/anaconda3/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "/home/simon/anaconda3/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:542: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "/home/simon/anaconda3/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:543: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "/home/simon/anaconda3/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:544: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "/home/simon/anaconda3/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:545: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "/home/simon/anaconda3/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -55,13 +24,13 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.neural_network import MLPClassifier\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.metrics import f1_score, accuracy_score\n",
+    "from sklearn.metrics import f1_score, accuracy_score, precision_score, recall_score\n",
     "from imblearn.under_sampling import RandomUnderSampler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +227,7 @@
        "4              NaN             D  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2065,7 +2034,7 @@
        "[5380 rows x 19 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2091,7 +2060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2137,16 +2106,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f59ff6d60f0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f6161a71908>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2177,7 +2146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2186,7 +2155,7 @@
        "[Text(0, 0, 'default'), Text(0, 0, 'no default')]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2219,7 +2188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2251,10 +2220,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th></th>\n",
-       "      <th>median</th>\n",
        "      <th>min</th>\n",
-       "      <th>max</th>\n",
        "      <th>mean</th>\n",
+       "      <th>max</th>\n",
+       "      <th>median</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Y</th>\n",
@@ -2267,17 +2236,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>36.0</td>\n",
        "      <td>0.004</td>\n",
-       "      <td>10000.0</td>\n",
        "      <td>62.921695</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>36.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>36.0</td>\n",
        "      <td>0.060</td>\n",
-       "      <td>576.0</td>\n",
        "      <td>39.110687</td>\n",
+       "      <td>576.0</td>\n",
+       "      <td>36.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2285,13 +2254,13 @@
       ],
       "text/plain": [
        "  Net_Annual_Income                           \n",
-       "             median    min      max       mean\n",
+       "                min       mean      max median\n",
        "Y                                             \n",
-       "0              36.0  0.004  10000.0  62.921695\n",
-       "1              36.0  0.060    576.0  39.110687"
+       "0             0.004  62.921695  10000.0   36.0\n",
+       "1             0.060  39.110687    576.0   36.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2303,7 +2272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2321,7 +2290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -4060,7 +4029,7 @@
        "[5380 rows x 19 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4071,7 +4040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4100,7 +4069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4124,7 +4093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4146,7 +4115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4156,7 +4125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4168,7 +4137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -4213,7 +4182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4231,7 +4200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4241,7 +4210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4259,49 +4228,46 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "val accuracy: 0.89942346507378\n",
-      "val f1: 0.5598573285691523\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "n_splits = 8\n",
-    "model = LogisticRegression(random_state=0)\n",
-    "# model = MLPClassifier()\n",
+    "def pipeline(model, n_splits = 8, sampler = None):\n",
+    "    kf = KFold(n_splits=n_splits)\n",
+    "    val_acc = 0\n",
+    "    val_f1 = 0\n",
+    "    val_recall = 0\n",
+    "    val_precision = 0\n",
     "\n",
-    "sampler = RandomUnderSampler(random_state=42)\n",
-    "kf = KFold(n_splits=n_splits)\n",
+    "    for train, validation in kf.split(X_train):\n",
+    "        X_train_, X_validation_, y_train_, y_validation_ = X_train[train], X_train[validation], y_train[train], y_train[validation]\n",
     "\n",
-    "val_acc = 0\n",
-    "val_f1 = 0\n",
+    "        scaler = StandardScaler()\n",
+    "        scaler.fit(X_train_)\n",
+    "        X_train_ = scaler.transform(X_train_)\n",
+    "        \n",
+    "        if sampler:\n",
+    "            X_train_, y_train_ = sampler.fit_resample(X_train_, y_train_)\n",
     "\n",
-    "for train, validation in kf.split(X_train):\n",
-    "    X_train_, X_validation_, y_train_, y_validation_ = X_train[train], X_train[validation], y_train[train], y_train[validation]\n",
-    "    \n",
-    "    scaler = StandardScaler()\n",
-    "    scaler.fit(X_train_)\n",
-    "    X_train_ = scaler.transform(X_train_)\n",
-    "    \n",
-    "    X_res, y_res = sampler.fit_resample(X_train_, y_train_)\n",
-    "    \n",
-    "    clf = model.fit(X_res, y_res)\n",
-    "    \n",
-    "    X_validation_ = scaler.transform(X_validation_)\n",
-    "    y_predict = clf.predict(X_validation_)\n",
-    "    \n",
-    "    val_f1 += f1_score(y_validation_, y_predict)\n",
-    "    val_acc += accuracy_score(y_validation_, y_predict)\n",
-    "    \n",
-    "val_f1 /= n_splits\n",
-    "val_acc /= n_splits\n",
+    "        clf = model.fit(X_train_, y_train_)\n",
     "\n",
-    "print(f\"val accuracy: {val_acc}\")\n",
-    "print(f\"val f1: {val_f1}\")"
+    "        X_validation_ = scaler.transform(X_validation_)\n",
+    "        y_predict = clf.predict(X_validation_)\n",
+    "\n",
+    "        val_f1 += f1_score(y_validation_, y_predict)\n",
+    "        val_acc += accuracy_score(y_validation_, y_predict)\n",
+    "        val_recall += recall_score(y_validation_, y_predict)\n",
+    "        val_precision += precision_score(y_validation_, y_predict)\n",
+    "\n",
+    "    val_f1 /= n_splits\n",
+    "    val_acc /= n_splits\n",
+    "    val_recall /= n_splits\n",
+    "    val_precision /= n_splits\n",
+    "\n",
+    "    return {\n",
+    "        \"val_f1\": val_f1,\n",
+    "        \"val_acc\": val_acc,\n",
+    "        \"val_recall\": val_recall,\n",
+    "        \"val_precision\": val_precision\n",
+    "    }"
    ]
   },
   {
@@ -4309,7 +4275,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n_splits = 8\n",
+    "model = LogisticRegression(random_state=0)\n",
+    "# model = MLPClassifier()\n",
+    "sampler = RandomUnderSampler(random_state=42)\n",
+    "\n",
+    "pipeline(model, n_splits = 8, sampler = sampler)"
+   ]
   },
   {
    "cell_type": "code",
