sampler selection and model selection

--- a/credit_prediction.ipynb
+++ b/credit_prediction.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,9 +23,17 @@
     "from sklearn import preprocessing\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.ensemble  import RandomForestClassifier, AdaBoostClassifier\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.metrics import f1_score, accuracy_score, precision_score, recall_score\n",
-    "from imblearn.under_sampling import RandomUnderSampler"
+    "from imblearn.under_sampling import RandomUnderSampler, CondensedNearestNeighbour, EditedNearestNeighbours, RepeatedEditedNearestNeighbours, AllKNN, TomekLinks, NearMiss\n",
+    "from imblearn.over_sampling import RandomOverSampler, SMOTE, SVMSMOTE, KMeansSMOTE, ADASYN\n",
+    "import time"
    ]
   },
   {
@@ -4221,7 +4229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model Selection"
+    "### Pipeline"
    ]
   },
   {
@@ -4272,45 +4280,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'val_f1': 0.5598573285691523,\n",
+       " 'val_acc': 0.89942346507378,\n",
+       " 'val_recall': 0.8884150303810006,\n",
+       " 'val_precision': 0.40933637671861495}"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "n_splits = 8\n",
     "model = LogisticRegression(random_state=0)\n",
     "# model = MLPClassifier()\n",
     "sampler = RandomUnderSampler(random_state=42)\n",
     "\n",
-    "pipeline(model, n_splits = 8, sampler = sampler)"
+    "pipeline(model, sampler = sampler)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sampler Selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "samplers = [\n",
+    "    ('None', None), \n",
+    "    ('RandomUnderSampler', RandomUnderSampler(random_state=42)),\n",
+    "    # ('CondensedNearestNeighbour', CondensedNearestNeighbour()), \n",
+    "    ('EditedNearestNeighbours', EditedNearestNeighbours()), \n",
+    "    ('RepeatedEditedNearestNeighbours', RepeatedEditedNearestNeighbours()), \n",
+    "    ('AllKNN', AllKNN()),\n",
+    "    ('TomeLinks', TomekLinks()),\n",
+    "    ('Near Miss', NearMiss()),\n",
+    "    ('RandomOverSampler', RandomOverSampler()),\n",
+    "    ('SMOTE', SMOTE()),\n",
+    "    ('SVMSMOTE', SVMSMOTE()),\n",
+    "    ('ADASYN', ADASYN())\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sampler: None\n",
+      "{'val_f1': 0.2746017688160528, 'val_acc': 0.9312276682213676, 'val_recall': 0.18218726194782173, 'val_precision': 0.5758986928104576}\n",
+      "Computation time: 0.49373340606689453\n",
+      "\n",
+      "Sampler: RandomUnderSampler\n",
+      "{'val_f1': 0.5598573285691523, 'val_acc': 0.89942346507378, 'val_recall': 0.8884150303810006, 'val_precision': 0.40933637671861495}\n",
+      "Computation time: 0.1900789737701416\n",
+      "\n",
+      "Sampler: EditedNearestNeighbours\n",
+      "{'val_f1': 0.5562422732052248, 'val_acc': 0.9054100864631918, 'val_recall': 0.8241421877720707, 'val_precision': 0.42040525867419043}\n",
+      "Computation time: 6.321014642715454\n",
+      "\n",
+      "Sampler: RepeatedEditedNearestNeighbours\n",
+      "{'val_f1': 0.5629898720307148, 'val_acc': 0.9041714398712599, 'val_recall': 0.8586057384338092, 'val_precision': 0.41948170554915803}\n",
+      "Computation time: 19.786977767944336\n",
+      "\n",
+      "Sampler: AllKNN\n",
+      "{'val_f1': 0.5634756918127849, 'val_acc': 0.9045856858413115, 'val_recall': 0.8558883471294613, 'val_precision': 0.420622319428254}\n",
+      "Computation time: 11.211382150650024\n",
+      "\n",
+      "Sampler: TomeLinks\n",
+      "{'val_f1': 0.46480174274073366, 'val_acc': 0.9258564492812918, 'val_recall': 0.4472107267463657, 'val_precision': 0.4854404195610591}\n",
+      "Computation time: 5.104978799819946\n",
+      "\n",
+      "Sampler: Near Miss\n",
+      "{'val_f1': 0.16389733549182556, 'val_acc': 0.4525035458091264, 'val_recall': 0.7418200526841076, 'val_precision': 0.09217860532243172}\n",
+      "Computation time: 0.9657862186431885\n",
+      "\n",
+      "Sampler: RandomOverSampler\n",
+      "{'val_f1': 0.5536548758132775, 'val_acc': 0.8981827728227367, 'val_recall': 0.8776955536368145, 'val_precision': 0.40529454784394303}\n",
+      "Computation time: 0.7512168884277344\n",
+      "\n",
+      "Sampler: SMOTE\n",
+      "{'val_f1': 0.5608594920508534, 'val_acc': 0.9010753348062079, 'val_recall': 0.8776955536368145, 'val_precision': 0.4128367822492369}\n",
+      "Computation time: 0.8509128093719482\n",
+      "\n",
+      "Sampler: SVMSMOTE\n",
+      "{'val_f1': 0.5618488541303652, 'val_acc': 0.9029321113929574, 'val_recall': 0.8653060334347942, 'val_precision': 0.41663085214987605}\n",
+      "Computation time: 4.24128532409668\n",
+      "\n",
+      "Sampler: ADASYN\n",
+      "{'val_f1': 0.5587972538276014, 'val_acc': 0.900248888525216, 'val_recall': 0.8776955536368145, 'val_precision': 0.4106422860333535}\n",
+      "Computation time: 1.7579967975616455\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = LogisticRegression(random_state=0)\n",
+    "\n",
+    "for sampler_name, sampler in samplers:\n",
+    "    t1 = time.time()\n",
+    "    print(f\"Sampler: {sampler_name}\")\n",
+    "    print(pipeline(model, sampler = sampler))\n",
+    "    t2 = time.time()\n",
+    "    print(f\"Computation time: {t2 - t1}\")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = [\n",
+    "    ('LR', LogisticRegression()),\n",
+    "    ('LDA', LinearDiscriminantAnalysis()),\n",
+    "    ('KNN', KNeighborsClassifier()),\n",
+    "    ('CART', DecisionTreeClassifier()),\n",
+    "    ('NB', GaussianNB()),\n",
+    "    ('SVM', SVC()),\n",
+    "    ('RForest', RandomForestClassifier()),\n",
+    "    ('AdaBoost', AdaBoostClassifier()),\n",
+    "    ('MLP', MLPClassifier())\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: LR\n",
+      "{'val_f1': 0.5634756918127849, 'val_acc': 0.9045856858413115, 'val_recall': 0.8558883471294613, 'val_precision': 0.420622319428254}\n",
+      "Computation time: 12.002496480941772\n",
+      "\n",
+      "Model: LDA\n",
+      "{'val_f1': 0.5642738046812905, 'val_acc': 0.9008680413495895, 'val_recall': 0.8912456463230296, 'val_precision': 0.41353136187402695}\n",
+      "Computation time: 12.30491328239441\n",
+      "\n",
+      "Model: KNN\n",
+      "{'val_f1': 0.5202567763978803, 'val_acc': 0.9099528134631646, 'val_recall': 0.681092072074664, 'val_precision': 0.4223471647701587}\n",
+      "Computation time: 11.262835264205933\n",
+      "\n",
+      "Model: CART\n",
+      "{'val_f1': 0.5261000423687012, 'val_acc': 0.9016927829146552, 'val_recall': 0.7584123576264258, 'val_precision': 0.40404729386842736}\n",
+      "Computation time: 10.59788203239441\n",
+      "\n",
+      "Model: NB\n",
+      "{'val_f1': 0.15603066355690542, 'val_acc': 0.23562072116302538, 'val_recall': 0.9711062533831745, 'val_precision': 0.08493165386730421}\n",
+      "Computation time: 11.71481728553772\n",
+      "\n",
+      "Model: SVM\n",
+      "{'val_f1': 0.5580248449128979, 'val_acc': 0.9054097455200065, 'val_recall': 0.8306823930723796, 'val_precision': 0.421212467994589}\n",
+      "Computation time: 11.720126867294312\n",
+      "\n",
+      "Model: RForest\n",
+      "{'val_f1': 0.5569772197281642, 'val_acc': 0.914908763603633, 'val_recall': 0.746291045084249, 'val_precision': 0.4462882071065156}\n",
+      "Computation time: 13.436971664428711\n",
+      "\n",
+      "Model: AdaBoost\n",
+      "{'val_f1': 0.5560166725332952, 'val_acc': 0.9095423178681504, 'val_recall': 0.787843438142305, 'val_precision': 0.4309453408690329}\n",
+      "Computation time: 13.135388135910034\n",
+      "\n",
+      "Model: MLP\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/simon/anaconda3/lib/python3.7/site-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (200) reached and the optimization hasn't converged yet.\n",
+      "  % self.max_iter, ConvergenceWarning)\n",
+      "/home/simon/anaconda3/lib/python3.7/site-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (200) reached and the optimization hasn't converged yet.\n",
+      "  % self.max_iter, ConvergenceWarning)\n",
+      "/home/simon/anaconda3/lib/python3.7/site-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (200) reached and the optimization hasn't converged yet.\n",
+      "  % self.max_iter, ConvergenceWarning)\n",
+      "/home/simon/anaconda3/lib/python3.7/site-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (200) reached and the optimization hasn't converged yet.\n",
+      "  % self.max_iter, ConvergenceWarning)\n",
+      "/home/simon/anaconda3/lib/python3.7/site-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (200) reached and the optimization hasn't converged yet.\n",
+      "  % self.max_iter, ConvergenceWarning)\n",
+      "/home/simon/anaconda3/lib/python3.7/site-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (200) reached and the optimization hasn't converged yet.\n",
+      "  % self.max_iter, ConvergenceWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "sampler = AllKNN()\n",
+    "\n",
+    "for model_name, model in models:\n",
+    "    t1 = time.time()\n",
+    "    print(f\"Model: {model_name}\")\n",
+    "    print(pipeline(model, sampler = sampler))\n",
+    "    t2 = time.time()\n",
+    "    print(f\"Computation time: {t2 - t1}\")\n",
+    "    print()"
+   ]
   }
  ],
  "metadata": {
